updated without post request to server.js

--- a/sample/views/home.ejs
+++ b/sample/views/home.ejs
@@ -4,10 +4,9 @@
         <div class="jumbotron" id="putAnswer"></div>
         <button class="btn btn-lg btn-primary" onclick="start();"><i class="fa fa-microphone"></i></button>  
     </div>    
-    <form action="/" method="POST">
-        <input id="putValue" name="inputString">
-        <button type="submit" class="btn btn-primary btn-lg">submit</button>
-    </form>
+   <div class="container" id="display">
+    
+   </div>
     <script type="text/javaScript">
         var writeAnswer = document.getElementById('putAnswer');
         var writeValue = document.getElementById('putValue');
@@ -16,15 +15,16 @@
             alert('please enable microphone and start the process!!!');
             if('webkitSpeechRecognition' in window)
             {
-				var speechRecognizer = new webkitSpeechRecognition();
-				speechRecognizer.continuous = true;
-				speechRecognizer.interimResults = true;
-				speechRecognizer.lang = 'en-IN';
-				speechRecognizer.start();
+                var speechRecognizer = new webkitSpeechRecognition();
+                speechRecognizer.continuous = false;
+                speechRecognizer.interimResults = true;
+                speechRecognizer.lang = 'en-IN';
+                speechRecognizer.start();
 
-				var finalTranscripts = '';
-				speechRecognizer.onresult = function(event){
-                    var interimTranscripts = '';
+                var finalTranscripts = '';
+                var interimTranscripts = '';
+                speechRecognizer.onresult = function(event){
+                    interimTranscripts = '';
                     for(var i = event.resultIndex; i < event.results.length; i++)
                     {
                         var transcript = event.results[i][0].transcript;
@@ -39,20 +39,46 @@
                         }
                     }
                     var msg = new SpeechSynthesisUtterance( transcript);
-                        window.speechSynthesis.speak(msg);
-                        //alert(finalTranscripts);
+                    window.speechSynthesis.speak(msg);
                     writeAnswer.innerHTML = finalTranscripts + '<span style="color:#999">' + interimTranscripts + '</span>';
-                   
-                    writeValue.value = finalTranscripts + interimTranscripts;
+                    
+                    getPosts(finalTranscripts+interimTranscripts);
                 };
+                
                 speechRecognizer.onerror = function (event) {
                         alert('enable microphone!!!');
-					};
-				}else{
-					alert('Your browser is not supported. If google chrome, please upgrade!!!');
-				}
+                    };
+                }else{
+                    alert('Your browser is not supported. If google chrome, please upgrade!!!');
+                }
             }
-       
+
+       function getPosts(inputString)
+       {
+            //= document.getElementById('putAnswer').innerHTML;
+            const q = encodeURIComponent(inputString);
+            const uri = 'https://api.wit.ai/message?q=' + q;
+            const auth = 'Bearer ' + 'RSNL2TFCK47R4QOS6NHWHFLTUSJYLHEI';
+            var req;
+            fetch(uri, {headers: {Authorization: auth}})
+            .then(res => res.json())
+            .then((res) => {
+                console.log(res);
+                console.log("first");
+                var req = JSON.stringify(res);
+                var output = "";
+                fetch('/', {
+                    method: 'PUT', // or 'PUT'
+                    body: JSON.stringify(res), // data can be `string` or {object}!
+                    headers:{
+                        'Content-Type': 'application/json',
+                        'Accept': 'application/json'
+                    }
+                }).then(res => res.json())
+                .then(response => console.log('Success:', JSON.stringify(response)))
+                //.catch(error => console.error('outputer:', error));
+            }); 
+       }
     </script>
 
 <% include partials/footer %>
