--- a/sample/views/home.ejs
+++ b/sample/views/home.ejs
@@ -1,4 +1,3 @@
-
 <% include partials/header %>
     <h5 align="center">Speech to text converter in javaScript</h5>
     <div class="container">
@@ -6,27 +5,19 @@
         <button class="btn btn-lg btn-primary" onclick="start();"><i class="fa fa-microphone"></i></button>  
     </div>    
    <div class="container" id="display">
-<<<<<<< HEAD
-
-=======
     
->>>>>>> 1ef2e93e518454aa027bcbf09391af5172489613
    </div>
     <script type="text/javaScript">
         var writeAnswer = document.getElementById('putAnswer');
         var writeValue = document.getElementById('putValue');
-        
-       function start() 
+        function start() 
         {
-            alert('please enable microphone and start the process!!!');
+            var flag = 1;
+            //alert('please enable microphone and start the process!!!');
             if('webkitSpeechRecognition' in window)
             {
                 var speechRecognizer = new webkitSpeechRecognition();
-<<<<<<< HEAD
-                speechRecognizer.continuous = true;
-=======
                 speechRecognizer.continuous = false;
->>>>>>> 1ef2e93e518454aa027bcbf09391af5172489613
                 speechRecognizer.interimResults = true;
                 speechRecognizer.lang = 'en-IN';
                 speechRecognizer.start();
@@ -48,15 +39,17 @@
                             interimTranscripts += transcript;
                         }
                     }
-                    var msg = new SpeechSynthesisUtterance( transcript);
-                    window.speechSynthesis.speak(msg);
+                    //var msg = new SpeechSynthesisUtterance( transcript);
+                    //window.speechSynthesis.speak(msg);
                     writeAnswer.innerHTML = finalTranscripts + '<span style="color:#999">' + interimTranscripts + '</span>';
-                    
-<<<<<<< HEAD
-                    setTimeout(getPosts(finalTranscripts+interimTranscripts), 5000);
-=======
-                    getPosts(finalTranscripts+interimTranscripts);
->>>>>>> 1ef2e93e518454aa027bcbf09391af5172489613
+                    var str = finalTranscripts+interimTranscripts;
+                    if(str.indexOf("stop")!=-1)
+                        {
+                            getPosts(finalTranscripts+interimTranscripts);
+                            speechRecognizer.stop();
+                            // setTimeout(getPosts(finalTranscripts+interimTranscripts),5000);
+                            flag = 0;
+                        }
                 };
                 
                 speechRecognizer.onerror = function (event) {
@@ -78,54 +71,22 @@
             .then(res => res.json())
             .then((res) => {
                 console.log(res);
-<<<<<<< HEAD
-                var req = JSON.stringify(res);
-                var output = "";
-                
-                output += `
-                    <ul>
-                        <li> message_id:- ${res.msg_id}</li>
-                        <li> text:- ${res._text}</li>
-                        <li> action:- ${res.entities.action[0].value}</li>
-                        <li> type:- ${res.entities.type[0].value}</li>
-                        <li> name:- ${res.entities.name[0].value}</li>
-                        <li> json:- ${req}</li>
-                    </ul>
-                `;
-                document.getElementById('display').innerHTML = output;
-            }); 
-            var file = req;
-            const upload = (file) => {
-            fetch('http://localhost:4000/', { // Your POST endpoint
-                method: 'POST',
-                headers: {
-                "Content-Type": "You will perhaps need to define a content-type here"
-                },
-                body: file // This is your file object
-            }).then(
-                response => response.json() // if the response is a JSON object
-            ).then(
-                success => console.log(success) // Handle the success response object
-            ).catch(
-                error => console.log(error) // Handle the error response object
-            );
-        };
-=======
                 console.log("first");
                 var req = JSON.stringify(res);
                 var output = "";
+                var arr = ""+res.entities.action[0].value +"," +res.entities.type[0].value +","+res.entities.name[0].value;
                 fetch('/', {
                     method: 'POST', // or 'PUT'
-                    body: JSON.stringify(res), // data can be `string` or {object}!
+                    body: arr, // data can be `string` or {object}!
                     headers:{
                         'Content-Type': 'application/x-www-form-urlencoded',
                         'Accept': 'application/x-www-form-urlencoded'   
                     }
                 }).then(res => res.json())
                 .then(response => console.log('Success:', JSON.stringify(response)))
-                //.catch(error => console.error('outputer:', error));
-            }); 
->>>>>>> 1ef2e93e518454aa027bcbf09391af5172489613
+                .catch(error => console.error('outputer:', error));
+                
+            });
        }
     </script>
 
